@@ -62,10 +62,10 @@ public class SubroutineScanner implements Opcode {
 
     private void scan(int pos, CodeIterator iter, Subroutine sub) throws BadBytecode {
         // Skip already processed blocks
-        if (done.contains(new Integer(pos)))
+        if (done.contains(Integer.valueOf(pos)))
             return;
 
-        done.add(new Integer(pos));
+        done.add(Integer.valueOf(pos));
 
         int old = iter.lookAhead();
         iter.move(pos);
@@ -103,10 +103,10 @@ public class SubroutineScanner implements Opcode {
         if (Util.isJumpInstruction(opcode)) {
             int target = Util.getJumpTarget(pos, iter);
             if (opcode == JSR || opcode == JSR_W) {
-                Subroutine s = (Subroutine) subTable.get(new Integer(target));
+                Subroutine s = (Subroutine) subTable.get(Integer.valueOf(target));
                 if (s == null) {
                     s = new Subroutine(target, pos);
-                    subTable.put(new Integer(target), s);
+                    subTable.put(Integer.valueOf(target), s);
                     scan(target, iter, s);
                 } else {
                     s.addCaller(pos);
