@@ -131,12 +131,12 @@ public class AnnotationImpl implements InvocationHandler {
         if (Object.class == method.getDeclaringClass()) {
             if ("equals".equals(name)) {
                 Object obj = args[0];
-                return new Boolean(checkEquals(obj));
+                return Boolean.valueOf(checkEquals(obj));
             }
             else if ("toString".equals(name))
                 return annotation.toString();
             else if ("hashCode".equals(name))
-                return new Integer(hashCode());
+                return Integer.valueOf(hashCode());
         }
         else if ("annotationType".equals(name)
                  && method.getParameterTypes().length == 0)
