@@ -152,13 +152,13 @@ public class FactoryHelper {
             Object[] args;
             if (domain == null) {
                 method = defineClass1;
-                args = new Object[] { cf.getName(), b, new Integer(0),
-                        new Integer(b.length) };
+                args = new Object[] { cf.getName(), b, Integer.valueOf(0),
+                                      Integer.valueOf(b.length) };
             }
             else {
                 method = defineClass2;
-                args = new Object[] { cf.getName(), b, new Integer(0),
-                        new Integer(b.length), domain };
+                args = new Object[] { cf.getName(), b, Integer.valueOf(0),
+                                      Integer.valueOf(b.length), domain };
             }
 
             return toClass2(method, loader, args);
