@@ -77,7 +77,7 @@ public class JvstTest5 extends JvstTestRoot {
     }
 
     public void testJIRA242() throws Exception {
-        Boolean ss = new Boolean(2 > 3);
+        Boolean ss = Boolean.valueOf(2 > 3);
         ClassPool cp = ClassPool.getDefault();
         CtClass cc = cp.get("test5.JIRA242$Hello");
         CtMethod m = cc.getDeclaredMethod("say");
@@ -219,7 +219,7 @@ public class JvstTest5 extends JvstTestRoot {
         System.out.println(src);
         badClass.addMethod(CtMethod.make(src, badClass));
         Class clazzz = badClass.toClass();
-        Object obj = clazzz.newInstance(); // <-- falls here
+        Object obj = clazzz.getConstructor().newInstance(); // <-- falls here
     }
 
     public void test83StackmapWithArrayType() throws Exception {
@@ -235,6 +235,13 @@ public class JvstTest5 extends JvstTestRoot {
         ctClass.writeFile();
         Object obj = make(ctClass.getName());
         assertEquals(1, invoke(obj, "run"));
+    }
+
+    public void testLoaderClassPath() throws Exception {
+        ClassPool cp = new ClassPool();
+        cp.appendClassPath(new LoaderClassPath(new Loader()));
+        assertNotNull(cp.get(Object.class.getName()));
+        assertNotNull(cp.get(this.getClass().getName()));
     }
 
     public void testAddDefaultMethod() throws Exception {
