@@ -21,7 +21,7 @@ public class ProxyFactoryTest extends TestCase {
         MyMethodHandler myHandler = new MyMethodHandler();
         myHandler.setX(4711);
 
-        MyCls myCls = (MyCls) proxyClass.newInstance();
+        MyCls myCls = (MyCls) proxyClass.getConstructor().newInstance();
         ((ProxyObject) myCls).setHandler(myHandler);
 
         MethodHandler h2 = ((ProxyObject) myCls).getHandler();
@@ -38,7 +38,7 @@ public class ProxyFactoryTest extends TestCase {
         MyMethodHandler myHandler = new MyMethodHandler();
         myHandler.setX(4711);
 
-        MyCls myCls = (MyCls) proxyClass.newInstance();
+        MyCls myCls = (MyCls) proxyClass.getConstructor().newInstance();
         ((ProxyObject) myCls).setHandler(myHandler);
 
 
@@ -93,21 +93,21 @@ public class ProxyFactoryTest extends TestCase {
         //proxyFactory.writeDirectory = "./dump";
         proxyFactory.setInterfaces(new Class[]{ TestDefaultI.class });
         Class intf = proxyFactory.createClass();
-        TestDefaultI obj = (TestDefaultI)intf.newInstance();
+        TestDefaultI obj = (TestDefaultI)intf.getConstructor().newInstance();
         obj.foo();
 
         ProxyFactory proxyFactory2 = new ProxyFactory();
         //proxyFactory2.writeDirectory = "./dump";
         proxyFactory2.setSuperclass(TestDefaultC.class);
         Class clazz2 = proxyFactory2.createClass();
-        TestDefaultC obj2 = (TestDefaultC)clazz2.newInstance();
+        TestDefaultC obj2 = (TestDefaultC)clazz2.getConstructor().newInstance();
         obj2.foo();
         obj2.bar();
 
         ProxyFactory proxyFactory3 = new ProxyFactory();
         proxyFactory3.setSuperclass(TestDefaultC2.class);
         Class clazz3 = proxyFactory3.createClass();
-        TestDefaultC2 obj3 = (TestDefaultC2)clazz3.newInstance();
+        TestDefaultC2 obj3 = (TestDefaultC2)clazz3.getConstructor().newInstance();
         obj3.foo();
         obj3.bar();
         obj3.baz();
